--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
-<h2>Bienvenido/Welcome</h2>
-<ul>
-    <li><a routerLink="/login">login</a></li>
-    <li><a routerLink="/profile">profile</a></li>
-    <li><a routerLink="/register">Register</a></li>
-</ul>
+<section class="homeBox">
+    <h2>Bienvenido!</h2>
+    <img src="https://i.pinimg.com/originals/19/73/65/19736506d95a73dbddd30457418ce075.gif" class="imgFound">
+ <ul  class="homeContainer">
+     <li><a  class="menuBox" routerLink="/login">Iniciar sesión</a></li>
+    <li><a class="menuBox"  routerLink="/register">Crear cuenta</a></li>
+</ul>   
+</section>
