--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,2 +1,8 @@
-<h2>Hola! {{user.email}}</h2>
+<img src="https://i.pinimg.com/originals/fd/64/ff/fd64ff15cdb561dfcd359d525403fda0.gif" class="imgFound">
+<section class="headerProfile">
+<h2>Hola! Bienvenido a tu perfil</h2>
 <button class="logout"(click)="logout()"> Logout</button>
+</section>
+
+
+
