--- a/client/src/app/components/profile/profile.component.scss
+++ b/client/src/app/components/profile/profile.component.scss
@@ -1,6 +1,32 @@
-
-
+*{
+    margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;   
+    color: #0F3911;
+}
 h1{
-    font-family: 12px;
-    color:aquamarine;
+    font-family: 32px;
+}
+.imgFound{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -3;
+    top: 0;
+    left: 0;
+}
+.logout{
+    border: #0F3911;
+    border-radius: 5px;
+    background-color: #0F3911;
+    font-size: 16px;
+    margin: 0.5rem;
+    color: #FFFFFF;
+}
+.headerProfile{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
 }
