--- a/client/src/app/components/register/register/register.component.html
+++ b/client/src/app/components/register/register/register.component.html
@@ -1,13 +1,17 @@
 <div class="login-container">
-    <form class="login-form">
+  <img src="https://i.pinimg.com/originals/4f/59/f5/4f59f57e82f430fac8b3824bf34c453f.gif" class="imgFound">
+
+    <form [formGroup]="formgroup" (ngSubmit)="submit()" class="register-form">
+
       <div class="form-group">
         <label for="email">Email</label>
         <input id="email" formControlName="email" type="text" class="form-control" placeholder="Email">
       </div>
+
       <div class="form-group">
         <label for="password">Password</label>
         <input id="password" formControlName="password" type="password" class="form-control" placeholder="Password">
       </div>
-      <button type="submit" class="btn btn-primary">Register</button>
+      <button type="submit" class="btn-primary">Crear cuenta</button>
     </form>
   </div>
